IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
7/29/15: Created an open channel between contours instead of overlapping
connectors When joining closed contours in 3dmod, and made it avoid a
self-crossing joined contour when one contout is inside another.

7/20/15: IMOD_4-8-39
7/16/15: Made Batchruntomo pick a good binning for 3d bead finding if no
binning directive is supplied.

7/15/15: Added stronger high frequency filtering for patch tracking to the
cryoSample template.

7/7/15: In eTomo - Fiducial Tracking - fixed a bug where track.com was not
being updated for automatic seeding, which made it work poorly for binned 
data.(Bug# 1894)

7/7/15: In uitest created a test against BB that uses automatic patch fitting
exclusively.(Bug# 1896)

7/4/15: IMOD_4-8-38
7/4/15: Changed default padding in coarse alignment to 10% to allow bigger 
shifts to be detected.

7/4/15: Fixed problem with autopatchfit when no extra limits are supplied.

7/1/15: Added option -title to alterheader for adding one title.

7/1/15: Fixed MRC header library to replace 10th title when adding a new
title, as old library used to.

7/1/15: Fixed plugin help on Mac.

6/28/15: Fixed Transferfid and Matchrotpairs starting Midas twice, without and
with mirroring.

6/27/15: Added 3dmod preference to enable the S hot key to turn on hardware
stereo, which is off by default on Macs, to prevent accidentally turning on
non-functional hardware stereo.

6/23/15: IMOD_4-8-37
6/23/15: Fixed header output for -origin for negative values.

6/15/15: Fixed bogus warnings in header output.

6/15/15: Fixed division by 0 problem in reprojections by Tilt.

6/13/15: Fixed saving of transparency for 3dmod movie sequences.

6/13/15: Changed fortran program model reading to open read-only.

6/8/15: IMOD_4-8-36
6/8/15: Added preNID to program list so it will be built and distributed.

6/3/15: Changed patch tracking size from 700x700 to 680x680 in system